# zkWasm-rust-template

./: .gitignore  Cargo.toml  Makefile  test.sh
contract/: Cargo.toml  test.sh
contract/src/: lib.rs
field/: Cargo.toml  test.sh
field/src/: lib.rs
keccak/: Cargo.toml  Makefile  batchinfo_empty.json  test.sh
keccak/src/: lib.rs
phantom/: Cargo.toml  Makefile  test.sh
phantom/src/: lib.rs
rlp/: Cargo.toml  Makefile  test.sh
rlp/src/: lib.rs
secp256k1/: Cargo.toml  Makefile  test.sh
secp256k1/src/: lib.rs
settlement/: Cargo.toml  Makefile  test.sh
settlement/src/: lib.rs  test.rs
src/: lib.rs
