[workspace]
members = ["rlp", "keccak", "secp256k1", "field", "phantom"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
rlp = { version = "0.5.2", default-features = false }
zkwasm-rust-sdk = { git = "https://github.com/DelphinusLab/zkWasm-rust.git" }
wasm-bindgen = "0.2.83"

[patch."https://github.com/DelphinusLab/zkWasm-rust.git"]
zkwasm-rust-sdk = { path = "/home/xgao/zkWasm-rust/", features=["default"]}

