[workspace]
members = ["rlp", "keccak", "secp256k1", "field", "phantom", "contract", "settlement"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
rlp = { version = "0.5.2", default-features = false }
zkwasm-rust-sdk = { git = "https://github.com/DelphinusLab/zkWasm-rust.git", branch="unbounded-kvpair", features=["witness"] }
derive_builder = { git = "https://github.com/DelphinusLab/zkWasm-rust.git" }
wasm-bindgen = "0.2.83"

#[patch."https://github.com/DelphinusLab/zkWasm-rust.git"]
#zkwasm-rust-sdk = { path = "/home/xgao/zkWasm-rust/", features=["witness"]}

[profile.release]
lto = true
opt-level = "z"