[package]
name = "zkwasm-field-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zkwasm_field_test"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
ff = { version = "0.13", features = ["derive"] }
zkwasm-rust-sdk = { git = "https://github.com/DelphinusLab/zkWasm-rust.git", features=["witness"] }
wasm-bindgen = "0.2.83"
primitive-types = {version="0.12.1", default-features = false}

# `wasm-opt` is on by default in for the release profile, but it can be
# disabled by setting it to `false`
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
rustflags = ["-C", "link-arg=--shared"]
