[package]
name = "zkwasm-keccak-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zkwasm_keccak_test"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
sha2 = "0.10.8"
zkwasm-rust-sdk = { git = "https://github.com/DelphinusLab/zkWasm-rust.git" }
wasm-bindgen = "0.2.83"

# `wasm-opt` is on by default in for the release profile, but it can be
# disabled by setting it to `false`
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
rustflags = ["-C", "link-arg=--shared"]
