[package]
name = "zkwasm-phantom-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zkwasm_phantom_test"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
rlp = { version = "0.5.2", default-features = false }
wasm-bindgen = "0.2.83"
zkwasm-rust-sdk.workspace=true

# `wasm-opt` is on by default in for the release profile, but it can be
# disabled by setting it to `false`
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
rustflags = ["-C", "link-args=-z stack-size=4096 --shared"]
